fix(whitelist): details of answer record addition error